tests/tooling/fixtures/native/recovery/negative/negative_while_call_condition_body_return_conservative_reject.objc3
// Negative fixture: unresolved while-loop entry conditions remain conservative in function return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeWhileCallConditionBodyReturnConservativeReject;

fn predicate() -> i32 {
  return 1;
}

fn main() -> i32 {
  while (predicate()) {
    return 42;
  }
}
